test/conformance/chainsaw/validate/clusterpolicy/standard/exclude/exclude-namespace/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-label
spec:
  background: false
  rules:
    - name: require-label
      match:
        any:
        - resources:
            kinds:
              - "*"
      exclude:
        any:
          - resources:
              namespaces:
                - default
      preconditions:
        all:
          - key: "{{ request.operation }}"
            operator: NotEquals
            value: DELETE
      validate:
        failureAction: Enforce
        message: 'Test'
        pattern:
          metadata:
            labels:
              foo: bar
