test/conformance/chainsaw/validate/clusterpolicy/standard/exclude/exclude-namespace/01-policies.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policies
spec:
  timeouts: {}
  try:
  - apply:
      file: policies.yaml
  - assert:
      file: policies-assert.yaml
